<resources>
    <string name="app_name">忍者</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sure">确定</string>
    <string name="confirm">确认</string>
    <string name="message">消息</string>
    <string name="contact">通讯录</string>
    <string name="my">我的</string>
    <string name="cancel">取消</string>
    <string name="input_id">input ID</string>
    <string name="load_account_error">加载账号数据失败</string>
    <string name="open_error">账号开启失败</string>
    <string name="unlock">解锁</string>
    <string name="save">保存</string>
    <string name="copy">复制</string>
    <string name="share">分享</string>
    <string name="copy_success">复制成功</string>
    <string name="fingerprint_recognition_title">指纹识别</string>
    <string name="fingerprint_recognition_subtitle">请手指放入指纹识别处</string>
    <string name="my_input">去录入</string>
    <string name="my_no_fingerprint">你尚未录入指纹，请先在手机系统中录入指纹，再返回本页面开启指纹解锁</string>
    <string name="fingerprint_recognition_use_password">使用密码</string>
    <string name="guide_import_account">导入账号</string>
    <string name="guide_dialog_title">选择导入方式</string>
    <string name="guide_import_album">相册</string>
    <string name="guide_import_camera">扫描二维码</string>
    <string name="import_apply_album_permission">申请读取相册权限</string>
    <string name="import_apply_location_permission">申请定位权限</string>
    <string name="import_qr_error">忍者二维码不正确</string>
    <string name="send">发送</string>
    <string name="input_send_message">请输入发送内容</string>
    <string name="main_click_exit_application">再次点击退出应用</string>
    <string name="send_error">发送失败</string>
    <string name="no_support_msg_type">不支持的消息类型</string>
    <string name="version">version:%s</string>
    <string name="complete">完成</string>
    <string name="add_friend">添加好友</string>
    <string name="create_group_chat">创建群聊</string>
    <string name="unused">需要激活才能正常使用</string>
    <string name="not_yet">暂不</string>
    <string name="activate">去激活</string>
    <string name="own">自己</string>
    <string name="share_error">分享失败</string>


    <!--  conversation  -->
    <string name="conversation_unline_tip">离线状态，下拉更新状态</string>
    <string name="conversation_please_to_talk">按住 说话</string>
    <string name="conversation_shot">拍摄</string>
    <string name="conversation_location">位置</string>
    <string name="conversation_red_pack">红包</string>
    <string name="conversation_wx_red_pack">微信红包</string>
    <string name="conversation_file_out_of_date">文件已过期</string>
    <string name="conversation_set_text_typing_title">对方正在输入</string>
    <string name="conversation_set_voice_typing_title">对方正在讲话</string>
    <string name="conversation_album">相册</string>
    <string name="conversation_file">文件</string>
    <string name="conversation_search">search</string>
    <string name="conversation_delete_item">删除</string>

    <string name="conversation_voice_rec">手指上滑，取消发送</string>
    <string name="conversation_voice_cancel">松开手指，取消发送</string>
    <string name="conversation_voice_short">录音时间太短</string>
    <string name="conversation_voice_failure">录音失败！</string>
    <string name="conversation_send_audio_fail">发送语音失败，文件长度为0或语音权限没有开启</string>
    <string name="conversation_take_photo_send_user_name">发送给：</string>
    <string name="conversation_rationale_extra_write">需要申请读写权限和麦克风权限</string>
    <string name="conversation_message_type_image">[图片]</string>
    <string name="conversation_message_type_voice">[语音]</string>
    <string name="conversation_message_type_location">[位置]</string>
    <string name="conversation_location_info">位置信息</string>

    <!--    create account-->
    <string name="create_account_register">注册账号</string>
    <string name="create_account_input_password">请输入密码</string>
    <string name="create_account_input_repassword">请再次请输入密码</string>
    <string name="create_account_password_is_null">密码不能为空</string>
    <string name="create_account_password_not_equal">两次密码不相同</string>
    <string name="create_account_sure">确定</string>
    <string name="create_account_has_account">已有账号,</string>
    <string name="create_account_import_account">导入二维码</string>
    <string name="create_account_error">创建账号失败</string>
    <string name="create_account_import_error">导入账号失败</string>
    <string name="create_account_input_alias">请输入备注名称</string>

    <!--    info-->
    <string name="edit_user_info_title">个人信息</string>
    <string name="edit_user_info_name">用户名</string>
    <string name="edit_user_input_info_name">请输入用户名</string>
    <string name="back_up_id_title">您的账号ID已经生成</string>
    <string name="back_up_des">本app使用区块链加密技术，密码一旦丢失，将不可找回。建议您保存二维码到您的手机或其他设备中。</string>
    <string name="back_up_save_local">保存到本地</string>
    <string name="back_up_not_yet">暂不</string>

    <!--    contact-->
    <string name="apply_list_title">申请列表</string>
    <string name="apply_list_accept">接受</string>
    <string name="apply_list_reject">拒绝</string>
    <string name="apply_list_expired">已失效</string>
    <string name="apply_list_added">已添加</string>
    <string name="detail_send">发消息</string>
    <string name="detail_add_contact">保存到通讯录</string>
    <string name="detail_edit_contact">编辑资料</string>
    <string name="delete_contact">删除当前好友？</string>
    <string name="delete_success">删除成功</string>
    <string name="contact_remark">备注</string>
    <string name="contact_des">描述</string>


    <!--    search contact-->
    <string name="search_contact_scan_qr_code">扫描二维码</string>
    <string name="search_contact_input_nick_name">备注名称</string>
    <string name="search_contact_remark">添加更多备注信息</string>
    <string name="search_contact_add">完成</string>
    <string name="search_contact_save_success">保存成功</string>
    <string name="search_contact_save_error">保存失败</string>
    <string name="search_contact_add_title">设置备注信息</string>
    <string name="search_contact_address_error">地址有误</string>

    <!--    my-->
    <string name="my_set">安全设置</string>
    <string name="my_help">帮助与反馈</string>
    <string name="my_version">版本号</string>
    <string name="my_about">关于我们</string>
    <string name="my_change_account">切换账号</string>
    <string name="my_id">我的ID</string>
    <string name="my_fingerprint">指纹识别</string>
    <string name="my_destroy">自毁模式</string>
    <string name="my_set_destroy_title">设置自毁密码</string>
    <string name="my_set_destroy_tip">⚠️\n自毁模式开启并使用后，现有账号将被替换，建议您保存现有二维码到相册。以免账号丢失。</string>
    <string name="my_user_name">用户名</string>
    <string name="my_account_manager">管理账号</string>
    <string name="my_authorization_friend">授权好友</string>
    <string name="my_no_support_fingerprint">当前手机不支持指纹识别</string>
    <string name="my_address_title">Ninja Address:</string>
    <string name="my_activate">激活</string>
    <string name="my_activate_code">激活码</string>
    <string name="my_renew">续费</string>
    <string name="my_inactivated">未激活</string>
    <string name="my_account_activated">账号已激活</string>
    <string name="my_account_expiration_date">激活失效还剩%s天</string>
    <string name="my_account_expiration">%s到期</string>
    <string name="my_account_unused">账号激活后才能正常使用</string>
    <string name="my_import_license_error">导入License失败</string>
    <string name="my_import_license_success">导入License成功</string>
    <string name="my_import_license_parse_error">解析License失败</string>
    <string name="my_import_license_contract_error">合约失败请重试</string>
    <string name="my_license_verify">验证</string>
    <string name="my_verify_error">验证失败</string>
    <string name="my_verify_success">License 可以正常使用</string>
    <string name="my_open_destroy">自毁模式已开启</string>
    <string name="my_close_destroy">自毁模式已关闭</string>

    <!--    accountManager-->
    <string name="account_manager_new_account">新建账号</string>
    <string name="account_manager_import_account">导入账号二维码</string>
    <string name="account_manager_export_account">导出账号二维码</string>
    <string name="account_manager_qr_name">ninja.png</string>
    <string name="account_manager_qr_id_name">ninja_id.png</string>
    <string name="account_manager_save_account_success">保存成功</string>
    <string name="account_manager_save_account_failure">保存失败</string>

    <!--    qroupchat-->
    <string name="contact_group_chat">群聊</string>
    <string name="contact_group_chat_complete">完成</string>
    <string name="contact_group_create">创建群聊</string>
    <string name="create_group_chat_create_name">取个群名</string>
    <string name="create_group_chat_create_no_name">暂不取名</string>
    <string name="create_group_chat_add_member">添加群成员</string>
    <string name="create_group_chat_add">添加</string>
    <string name="create_group_chat_disbanded">群已经解散</string>
    <string name="create_group_input_group_name">请输入群名称</string>

    <string name="group_chat_detail_name">群聊名称</string>
    <string name="group_chat_detail_qr">群二维码</string>
    <string name="group_chat_detail_delete_member">删除群成员</string>
    <string name="group_chat_detail_out">退出群聊</string>
    <string name="group_chat_remove_member_title">删除群成员</string>
    <string name="group_chat_banned">禁止群聊天</string>
    <string name="group_chat_banned_error">操作失败</string>


    <!--   activation -->
    <string name="activation_des">您可以通过导入文件或者输入激活码两种形式，激活账号。</string>
    <string name="activation_import">扫描激活码</string>
    <string name="activation_input_activation_code">输入激活码</string>

    <!--    authorization-->
    <string name="authorization_friends">好友授权</string>
    <string name="authorization_friends_not_saved">未保存好友</string>
    <string name="authorization_input_id">输入好友ID</string>
    <string name="authorization_friends_saved">已保存好友</string>
    <string name="authorization_select_friend_from_contact">从通讯录选择好友</string>
    <string name="authorization_input_days">输入授权天数</string>
    <string name="authorization_all_authorization">全部授权</string>
    <string name="authorization_remaining_activation_days">剩余激活天数%s天,</string>
    <string name="authorization_failed">授权失败</string>
    <string name="authorization_days_error">授权天数超过最大天数</string>
    <string name="authorization_success">授权成功</string>
    <string name="authorization_go_chat">去聊天</string>
    <string name="authorization_continue">继续授权</string>
    <string name="authorization_select_friend">选择好友</string>
</resources>