<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ninjahome.ninja.viewmodel.CreateAccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingStart="31dp"
        android:paddingEnd="31dp">

        <ImageView
            android:id="@+id/iconIV"
            android:layout_width="122dp"
            android:layout_height="122dp"
            android:layout_marginTop="79dp"
            android:scaleType="center"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/create_account_register"
            android:textColor="@color/color_26253c"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iconIV" />

        <EditText
            android:id="@+id/passwordET"
            style="@style/EditTextStyle"
            android:layout_marginTop="16dp"
            android:hint="@string/create_account_input_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintTop_toBottomOf="@+id/titleTv"
            tools:ignore="MissingConstraints,TextFields" />

        <EditText
            android:id="@+id/rePasswordET"
            style="@style/EditTextStyle"
            android:layout_marginTop="16dp"
            android:hint="@string/create_account_input_repassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="@={viewModel.rePassword}"
            app:layout_constraintTop_toBottomOf="@+id/passwordET"
            tools:ignore="MissingConstraints,TextFields" />

        <TextView
            android:id="@+id/sureTv"
            style="@style/ButtonStyle"
            onClickCommand="@{viewModel.clickSure}"
            android:layout_marginTop="16dp"
            android:text="@string/create_account_sure"
            app:layout_constraintTop_toBottomOf="@+id/rePasswordET"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/hasAccountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/create_account_has_account"
            android:textColor="@color/color_86868a"
            app:layout_constraintEnd_toStartOf="@+id/importTv"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sureTv" />

        <TextView
            android:id="@+id/importTv"
            onClickCommand="@{viewModel.clickImport}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/create_account_import_account"
            android:textColor="@color/color_26253c"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hasAccountTv"
            app:layout_constraintTop_toBottomOf="@+id/sureTv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>