<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ninjahome.ninja.viewmodel.EditContactViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            layout="@layout/title_layout"
            app:viewModel="@{viewModel}" />

        <TextView
            android:id="@+id/remarkLabTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="27dp"
            android:text="@string/contact_remark"
            android:textColor="@color/color_86868a"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleLayout" />

        <EditText
            android:id="@+id/nickNameEt"
            style="@style/EditTextStyle"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/search_contact_input_nick_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="true"
            android:text="@={viewModel.nickName}"
            app:layout_constraintTop_toBottomOf="@+id/remarkLabTv"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/desLabTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="27dp"
            android:text="@string/contact_des"
            android:textColor="@color/color_86868a"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nickNameEt" />

        <EditText
            style="@style/EditTextStyle"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:gravity="top"
            android:hint="@string/search_contact_remark"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="90dp"
            android:minLines="3"
            android:paddingTop="6dp"
            android:text="@={viewModel.remark}"
            app:layout_constraintTop_toBottomOf="@+id/desLabTv"
            tools:ignore="MissingConstraints" />

        <TextView
            style="@style/ButtonStyle"
            onClickCommand="@{viewModel.clickSave}"
            android:layout_width="158dp"
            android:layout_marginBottom="75dp"
            android:text="@string/search_contact_add"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>