<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ninjahome.ninja.viewmodel.AccountManagerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            layout="@layout/title_layout"
            app:viewModel="@{viewModel}" />

        <TextView
            android:id="@+id/createTv"
            style="@style/NextTextViewStyle"
            onClickCommand="@{viewModel.clickCreate}"
            android:layout_marginTop="18dp"
            android:text="@string/account_manager_new_account"
            app:layout_constraintTop_toBottomOf="@+id/titleLayout"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/importTv"
            style="@style/NextTextViewStyle"
            onClickCommand="@{viewModel.clickImport}"
            android:text="@string/account_manager_import_account"
            app:layout_constraintTop_toBottomOf="@+id/createTv"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/exportTv"
            style="@style/NextTextViewStyle"
            onClickCommand="@{viewModel.clickExport}"
            android:text="@string/account_manager_export_account"
            app:layout_constraintTop_toBottomOf="@+id/importTv"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>