<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.ninjahome.ninja.viewmodel.MyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<ImageView
    android:layout_width="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/my_top_bg"
    android:layout_height="wrap_content"/>
        <com.stfalcon.chatkit.utils.RoundedImageView
            android:id="@+id/avatarIv"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/editIv"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/avatarIv"
            app:layout_constraintBottom_toBottomOf="@+id/avatarIv"
            app:layout_constraintEnd_toEndOf="@+id/avatarIv"
            android:background="@drawable/my_edit_avatar"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/nameTv"
            android:textColor="@color/color_0c123d"
            app:layout_constraintTop_toBottomOf="@+id/avatarIv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="11dp"
            android:textSize="21sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/nameTv"
            app:layout_constraintTop_toTopOf="@+id/nameTv"
            app:layout_constraintBottom_toBottomOf="@+id/nameTv"
            android:background="@drawable/my_id_qr"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/qrTv"
            android:textColor="@color/color_86868a"
            app:layout_constraintTop_toBottomOf="@+id/nameTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/setTv"
            android:text="@string/my_set"
            app:layout_constraintTop_toBottomOf="@+id/qrTv"
            android:layout_marginTop="50dp"
            style="@style/NextTextViewStyle"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/helpTv"
            android:text="@string/my_help"
            app:layout_constraintTop_toBottomOf="@+id/setTv"
            style="@style/NextTextViewStyle"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/versionTv"
            android:text="@string/my_version"
            app:layout_constraintTop_toBottomOf="@+id/helpTv"
            style="@style/NextTextViewStyle"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/aboutTv"
            android:text="@string/my_about"
            app:layout_constraintTop_toBottomOf="@+id/versionTv"
            style="@style/NextTextViewStyle"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/changeAccountTv"
            android:text="@string/my_change_account"
            app:layout_constraintTop_toBottomOf="@+id/aboutTv"
            style="@style/NextTextViewStyle"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>