<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ninjahome.ninja.viewmodel.ActivationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <include
            layout="@layout/title_layout"
            app:viewModel="@{viewModel}" />

        <TextView
            android:id="@+id/desTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/activation_des"
            android:textColor="@color/color_86868a"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleLayout" />

        <Button
            android:id="@+id/importTv"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/activation_import"
            android:textColor="@color/color_26253c"
            android:textSize="16sp"
            onClickCommand="@{viewModel.clickImport}"
            app:drawableEndCompat="@drawable/next_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desTv" />


        <EditText
            android:id="@+id/activationCodeEt"
            textChanged="@{viewModel.textChange}"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:layout_margin="15dp"
            android:background="@drawable/bg_activation_code"
            android:gravity="top"
            android:hint="@string/activation_input_activation_code"
            android:importantForAutofill="no"
            android:padding="15dp"
            android:text="@={viewModel.activationCode}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/importTv"
            tools:ignore="TextFields" />
        <Button
            android:id="@+id/verifyBtn"
            onClickCommand="@{viewModel.clickVerify}"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/bg_activation_sure"
            android:text="@string/my_license_verify"
            android:textColor="@color/white"
            app:layout_goneMarginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/activationCodeEt"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/slienseTv"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verifyBtn"
            android:layout_margin="15dp"
            onLongClickCommand="@{viewModel.longClick}"
            android:padding="15dp"
            android:background="@drawable/bg_activation_code"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/createBtn"
            onClickCommand="@{viewModel.clickSure}"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/bg_activation_sure"
            android:enabled="@{viewModel.enable}"
            android:text="@string/sure"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>